# diglett

./: .gitignore  CMakeLists.txt  README.txt
include/: common.h  error.h  fifo.h  listener.h  log.h  packet_manager.h
src/: fifo.c  listener.c  log.c  main_client.c  packet_manager.c
